# Graph

./: .gitignore  Build  Build.sh  CMakeLists.txt  CODEOWNERS  CONTRIBUTING  Graph.pro  README.md  runApp  runTest  Семантический анализатор.txt
.github/workflows/: ci.yaml
App/: App.pro  CMakeLists.txt  main.cpp
Backend/: Backend.pro  CMakeLists.txt
Backend/src/: Backend.cpp  Backend.hpp  BackendSRC.pro  CMakeLists.txt
Backend/test/: BackendTest.pro  CMakeLists.txt  test.cpp
Common/: CMakeLists.txt  Common.pro
Common/AST/: AST.pro  CMakeLists.txt
Common/AST/src/: AST.cpp  AST.hpp  ASTSRC.pro  CMakeLists.txt  Node.hpp
Common/AST/test/: ASTTest.pro  CMakeLists.txt  test.cpp
Common/Figures/: CMakeLists.txt  Circle.cpp  Circle.hpp  Diamond.cpp  Diamond.hpp  DotCloud.cpp  DotCloud.hpp  Figures.hpp  Figures.pro  Graph.cpp  Graph.hpp  Line.cpp  Line.hpp  Note.cpp  Note.hpp  Reactangle.cpp  Reactangle.hpp  Rectangle.cpp  Rectangle.hpp  Shape.cpp  Shape.hpp  Style.cpp  Style.hpp
Common/FiguresStorage/: CMakeLists.txt  FiguresStorage.pro
Common/FiguresStorage/src/: CMakeLists.txt  FiguresStorage.cpp  FiguresStorage.hpp  FiguresStorageSRC.pro
Common/FiguresStorage/test/: CMakeLists.txt  FiguresStorageTest.pro  test.cpp
Common/FileManager/: CMakeLists.txt  FileManager.pro
Common/FileManager/src/: CMakeLists.txt  FileManager.cpp  FileManager.hpp  FileManagerSRC.pro
Common/FileManager/test/: CMakeLists.txt  FileManagerTest.pro  test.cpp
Common/Logger/: CMakeLists.txt  Logger.hpp  Logger.pro
Common/Logger/src/: CMakeLists.txt  Logger.cpp  Logger.hpp  LoggerSRC.pro
Common/Logger/test/: CMakeLists.txt  LoggerTest.pro  test.cpp
Common/Parser/: CMakeLists.txt
Common/Parser/src/: CMakeLists.txt  Parser.cpp  Parser.h  Parser.hpp  _lexer_.cpp  _parser_.cpp  _parser_.h  lexer.lex  parser.y
Common/Parser/test/: CMakeLists.txt  test.cpp
Common/Parser/test/tests/: test1  test2  test3  test4  test5  test6
Common/Retranslator/: CMakeLists.txt  Retlanslator.cpp  Retranslator.hpp  Retranslator.pro
Common/Retranslator/src/: CMakeLists.txt  Retlanslator.cpp  Retranslator.cpp  Retranslator.hpp  RetranslatorSRC.pro
Common/Retranslator/test/: CMakeLists.txt  RetranslatorTest.cpp  RetranslatorTest.pro  test.cpp
Common/SemanticAnalyzer/: AstStatementParser.cpp  AstStatementParser.h  CMakeLists.txt  SemanticAnalyzer.cpp  SemanticAnalyzer.h  SemanticAnalyzer.pro
Common/SemanticAnalyzer/src/: AstStatementParser.cpp  AstStatementParser.h  AstStatementParser.hpp  CMakeLists.txt  SemanticAnalyzer.cpp  SemanticAnalyzer.h  SemanticAnalyzer.hpp  SemanticAnalyzer.pro
Common/SemanticAnalyzer/test/: CMakeLists.txt  SemanticAnalyzerTest.cpp  SemanticAnalyzerTest.pro  test.cpp
Common/Translator/: CMakeLists.txt
Common/Translator/src/: CMakeLists.txt  Translator.cpp  Translator.hpp
Common/Translator/test/: CMakeLists.txt  test.cpp
Docs/: Graph_layout.txt  grammatics.txt  semantic_rules.tex  Расположение фигур.txt  Семантический анализатор.txt
Frontend/: Frontend.pro
Frontend/src/: BaseWidget.cpp  BaseWidget.hpp  Frontend.cpp  Frontend.hpp  FrontendSRC.pro  GraphicsWidget.cpp  GraphicsWidget.hpp  MainWindow.cpp  MainWindow.hpp  TextWidget.cpp  TextWidget.hpp
Frontend/test/: FrontendTest.pro  test.cpp
Frontend/utils/Style/: ButtonStyle.hpp
tmp/: grammatics.txt
