set(SOURCE_BACKEND_TEST test.cpp)	

add_executable(BackendTest ${SOURCE_BACKEND_TEST})

target_link_libraries(BackendTest PRIVATE Backend)

target_include_directories(BackendTest PRIVATE
    ${CMAKE_CURRENT_SOURCE_DIR}
    ${CMAKE_SOURCE_DIR}/src
)

# Включаем поддержку CTest (если еще не включена в корневом CMakeLists.txt)
include(CTest)

# Добавляем тест
add_test(NAME BackendTests COMMAND BackendTest)

#Указываем директории с заголовочными файлами (если есть)
#target_include_directories(Backend PUBLIC
#    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
#    $<INSTALL_INTERFACE:include>
#)
